--- a/AutoLayoutSplitView/Base.lproj/MainMenu.xib
+++ b/AutoLayoutSplitView/Base.lproj/MainMenu.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -10,7 +12,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="AutoLayoutSplitView" id="56">
@@ -649,33 +651,56 @@
         <window title="AutoLayoutSplitView" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="371">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="420" y="191" width="581" height="401"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="746"/>
-            <view key="contentView" autoresizesSubviews="NO" id="372">
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
+            <view key="contentView" autoresizesSubviews="NO" wantsLayer="YES" id="372">
                 <rect key="frame" x="0.0" y="0.0" width="581" height="401"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <splitView dividerStyle="paneSplitter" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G99-3Z-MCh">
+                    <splitView wantsLayer="YES" dividerStyle="paneSplitter" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G99-3Z-MCh">
                         <rect key="frame" x="0.0" y="0.0" width="581" height="340"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
-                            <customView identifier="leftView" id="L4I-ZW-k1P" userLabel="Left Pane View">
+                            <customView identifier="leftView" wantsLayer="YES" id="L4I-ZW-k1P" userLabel="Left Pane View">
                                 <rect key="frame" x="0.0" y="0.0" width="133" height="340"/>
                                 <autoresizingMask key="autoresizingMask"/>
+                                <subviews>
+                                    <textField wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1Li-3l-71A">
+                                        <rect key="frame" x="23" y="163" width="88" height="14"/>
+                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Left (min width)" id="GX6-lC-mKs">
+                                            <font key="font" metaFont="smallSystem"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                </subviews>
                                 <constraints>
+                                    <constraint firstItem="1Li-3l-71A" firstAttribute="centerX" secondItem="L4I-ZW-k1P" secondAttribute="centerX" id="8ec-ha-3X3"/>
+                                    <constraint firstItem="1Li-3l-71A" firstAttribute="centerY" secondItem="L4I-ZW-k1P" secondAttribute="centerY" id="LT1-nd-Sze"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="fXH-fc-Vc6"/>
                                 </constraints>
                             </customView>
-                            <customView identifier="middleView" id="NCb-uJ-idX" userLabel="Middle Pane View">
+                            <customView identifier="middleView" wantsLayer="YES" id="NCb-uJ-idX" userLabel="Middle Pane View">
                                 <rect key="frame" x="143" y="0.0" width="278" height="340"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="U9U-Ff-DD5"/>
                                 </constraints>
                             </customView>
-                            <customView identifier="rightView" id="c5j-8S-WgI" userLabel="Right Pane View">
+                            <customView identifier="rightView" wantsLayer="YES" id="c5j-8S-WgI" userLabel="Right Pane View">
                                 <rect key="frame" x="431" y="0.0" width="150" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <subviews>
+                                    <textField wantsLayer="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qfu-U5-jJ2">
+                                        <rect key="frame" x="25" y="163" width="101" height="14"/>
+                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="clipping" title="Right (fixed width)" id="KF1-iw-FPs">
+                                            <font key="font" metaFont="smallSystem"/>
+                                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                </subviews>
                                 <constraints>
+                                    <constraint firstItem="qfu-U5-jJ2" firstAttribute="centerY" secondItem="c5j-8S-WgI" secondAttribute="centerY" id="2kb-ZD-Y0X"/>
+                                    <constraint firstItem="qfu-U5-jJ2" firstAttribute="centerX" secondItem="c5j-8S-WgI" secondAttribute="centerX" id="Myk-j4-SIa"/>
                                     <constraint firstAttribute="width" constant="150" id="UhS-Tz-mNA"/>
                                 </constraints>
                             </customView>
@@ -684,17 +709,16 @@
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="Jtz-dR-VNS"/>
                         </constraints>
                         <holdingPriorities>
-                            <real value="256"/>
-                            <real value="250"/>
-                            <real value="250"/>
+                            <real value="308"/>
+                            <real value="220"/>
+                            <real value="174"/>
                         </holdingPriorities>
                         <connections>
-                            <outlet property="delegate" destination="-2" id="OQh-Hk-E83"/>
+                            <outlet property="delegate" destination="494" id="06X-XT-32l"/>
                         </connections>
                     </splitView>
-                    <button identifier="toggleLeftButton" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uXI-HO-fZE">
+                    <button identifier="toggleLeftButton" wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uXI-HO-fZE">
                         <rect key="frame" x="14" y="353" width="111" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="99" id="qgm-By-Zs2"/>
                         </constraints>
@@ -706,9 +730,8 @@
                             <action selector="toggleLeftPane:" target="494" id="5gB-SF-nfT"/>
                         </connections>
                     </button>
-                    <button identifier="toggleRightButton" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GF3-5k-fk7">
+                    <button identifier="toggleRightButton" wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GF3-5k-fk7">
                         <rect key="frame" x="447" y="353" width="120" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="108" id="vVt-xS-gYi"/>
                         </constraints>
@@ -720,9 +743,8 @@
                             <action selector="toggleRightPane:" target="494" id="CVY-lC-oGH"/>
                         </connections>
                     </button>
-                    <button identifier="loadPhotoButton" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AhC-Yo-wFp">
+                    <button identifier="loadPhotoButton" wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AhC-Yo-wFp">
                         <rect key="frame" x="125" y="353" width="111" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="99" id="VQO-zC-ILe"/>
                         </constraints>
@@ -734,13 +756,12 @@
                             <action selector="loadPhoto:" target="494" id="d7g-ek-d4n"/>
                         </connections>
                     </button>
-                    <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nhJ-kC-3yF">
-                        <rect key="frame" x="238" y="361" width="92" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <slider wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nhJ-kC-3yF">
+                        <rect key="frame" x="238" y="363" width="92" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="92" id="OUh-Zc-QH7"/>
                         </constraints>
-                        <sliderCell key="cell" controlSize="small" continuous="YES" state="on" alignment="left" minValue="0.10000000000000001" maxValue="1" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="6IZ-wM-hz0">
+                        <sliderCell key="cell" controlSize="small" continuous="YES" state="on" alignment="left" minValue="0.10000000000000001" maxValue="5" doubleValue="1" tickMarkPosition="above" sliderType="linear" id="6IZ-wM-hz0">
                             <connections>
                                 <action selector="sliderAction:" target="494" id="lap-w2-IF5"/>
                             </connections>
@@ -759,7 +780,7 @@
                     <constraint firstItem="GF3-5k-fk7" firstAttribute="top" secondItem="372" secondAttribute="top" constant="20" symbolic="YES" id="Xkq-dd-URr"/>
                     <constraint firstItem="nhJ-kC-3yF" firstAttribute="top" secondItem="372" secondAttribute="top" constant="24" id="YJD-ib-zgU"/>
                     <constraint firstItem="G99-3Z-MCh" firstAttribute="top" secondItem="372" secondAttribute="top" constant="61" id="cFZ-ip-AWt"/>
-                    <constraint firstAttribute="trailing" secondItem="G99-3Z-MCh" secondAttribute="trailing" id="jid-Eb-iir"/>
+                    <constraint firstItem="G99-3Z-MCh" firstAttribute="trailing" secondItem="372" secondAttribute="trailing" id="jid-Eb-iir"/>
                     <constraint firstItem="uXI-HO-fZE" firstAttribute="top" secondItem="372" secondAttribute="top" constant="20" symbolic="YES" id="lzf-DJ-o55"/>
                 </constraints>
             </view>
@@ -773,9 +794,12 @@
                 <outlet property="leftPaneWidthConstraint" destination="fXH-fc-Vc6" id="BpB-hw-AcM"/>
                 <outlet property="middlePane" destination="NCb-uJ-idX" id="ons-DX-YtP"/>
                 <outlet property="rightPane" destination="c5j-8S-WgI" id="iEy-y8-tk7"/>
+                <outlet property="rightPaneWidthConstraint" destination="UhS-Tz-mNA" id="hf4-0r-Yld"/>
                 <outlet property="scrollView" destination="Apy-eM-XdW" id="kw6-px-ycL"/>
                 <outlet property="slider" destination="nhJ-kC-3yF" id="Qee-u6-Rhj"/>
                 <outlet property="splitView" destination="G99-3Z-MCh" id="Png-oL-caF"/>
+                <outlet property="splitViewLeadingConstraint" destination="GMM-Iq-g0t" id="sKm-vt-a8j"/>
+                <outlet property="splitViewTrailingConstraint" destination="jid-Eb-iir" id="get-zt-CKg"/>
                 <outlet property="window" destination="371" id="532"/>
             </connections>
         </customObject>
