--- a/AutoLayoutSplitView/Base.lproj/MainMenu.xib
+++ b/AutoLayoutSplitView/Base.lproj/MainMenu.xib
@@ -659,7 +659,7 @@
                     <splitView wantsLayer="YES" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G99-3Z-MCh">
                         <rect key="frame" x="0.0" y="0.0" width="581" height="340"/>
                         <subviews>
-                            <customView identifier="leftView" wantsLayer="YES" id="L4I-ZW-k1P" userLabel="Left Pane View">
+                            <customView identifier="leftPane" wantsLayer="YES" id="L4I-ZW-k1P" userLabel="Left Pane View">
                                 <rect key="frame" x="0.0" y="0.0" width="133" height="340"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
@@ -678,14 +678,14 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="fXH-fc-Vc6"/>
                                 </constraints>
                             </customView>
-                            <customView identifier="middleView" wantsLayer="YES" misplaced="YES" id="NCb-uJ-idX" userLabel="Middle Pane View">
+                            <customView identifier="middlePane" wantsLayer="YES" misplaced="YES" id="NCb-uJ-idX" userLabel="Middle Pane View">
                                 <rect key="frame" x="142" y="0.0" width="278" height="340"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="U9U-Ff-DD5"/>
                                 </constraints>
                             </customView>
-                            <customView identifier="rightView" wantsLayer="YES" misplaced="YES" id="c5j-8S-WgI" userLabel="Right Pane View">
+                            <customView identifier="rightPane" wantsLayer="YES" misplaced="YES" id="c5j-8S-WgI" userLabel="Right Pane View">
                                 <rect key="frame" x="429" y="0.0" width="152" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
@@ -709,9 +709,9 @@
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="Jtz-dR-VNS"/>
                         </constraints>
                         <holdingPriorities>
-                            <real value="308"/>
-                            <real value="220"/>
-                            <real value="174"/>
+                            <real value="255"/>
+                            <real value="250"/>
+                            <real value="250"/>
                         </holdingPriorities>
                         <connections>
                             <outlet property="delegate" destination="494" id="06X-XT-32l"/>
